@startuml
' 类图2 — Sprint 3 (Construction)
' 第3周交付：AI策略接口 + EventBus + 蓝牙占位接口

skinparam classAttributeIconSize 0

package "engine" {
  class GameEngine {
    - dealManager: DealManager
    - turnManager: TurnManager
    - settlementManager: SettlementManager
    + playCards(String, List): PlayResult
    + passTurn(String): PassResult
  }
  class DealManager {
    + dealCards(GameState): void
  }
  class TurnManager {
    - eventBus: EventBus
    + switchPlayer(GameState): void
  }
  class SettlementManager {
    + checkAndSettle(GameState): void
  }
}

package "ai" {
  interface AIDecisionStrategy <<interface>> {
    + decidePlay(Player, GameState): List
    + recordPlayFailure(): void
  }
  class GreedyAIDecisionStrategy {
    + decidePlay(Player, GameState): List
  }
  class MonteCarloAIDecisionStrategy {
    + decidePlay(Player, GameState): List
  }
}

package "event" {
  class EventBus {
    - listeners
    + register(GameEventListener): void
    + unregister(GameEventListener): void
    + post(GameEvent): void
    + getInstance(): EventBus
  }
  interface GameEventListener <<interface>> {
    + onCardPlayed(CardPlayedEvent): void
    + onPlayerPassed(PlayerPassedEvent): void
    + onTurnChanged(TurnChangedEvent): void
    + onGameOver(GameOverEvent): void
  }
  class GameEvent {
  }
  class CardPlayedEvent {
    + playerId: String
    + playedCardIds: List
  }
  class PlayerPassedEvent {
    + playerId: String
  }
  class TurnChangedEvent {
    + newCurrentPlayerId: String
    + reason: String
  }
  class GameOverEvent {
    + winnerId: String
  }
}

package "network" {
  interface MultiplayerGateway <<interface>> {
    + sendPlayAction(Play): void
    + sendPassAction(String): void
    + syncGameState(GameState): void
  }
  class BluetoothGateway {
    + sendPlayAction(Play): void
    + sendPassAction(String): void
  }
}

AIDecisionStrategy <|.. GreedyAIDecisionStrategy
AIDecisionStrategy <|.. MonteCarloAIDecisionStrategy
GameEngine --> AIDecisionStrategy
GameEngine --> EventBus
TurnManager --> EventBus
EventBus "1" -- "*" GameEventListener
GameEvent <|-- CardPlayedEvent
GameEvent <|-- PlayerPassedEvent
GameEvent <|-- TurnChangedEvent
GameEvent <|-- GameOverEvent
MultiplayerGateway <|.. BluetoothGateway
GameEngine <.. MultiplayerGateway

@enduml
